@@ -2,7 +2,10 @@
 
 namespace App\Http\Controllers;
 
+use App\User;
 use Illuminate\Http\Request;
+use JWTAuth;
+use Tymon\JWTAuth\Exceptions\JWTException;
 
 class AuthenticatedController extends Controller
 {
@@ -11,11 +14,14 @@ class AuthenticatedController extends Controller
     * @return void
     */
     public function __construct(){
-        $this->middleware('jwt.auth', 'jwt.refresh');
+        $this->middleware(['jwt.auth', 'jwt.refresh']);
     }
 
     //General Functions
     public function getUserObject() {
+        //PRE: JWTAuth token
+        //POST: returns the user object for the JWTAuth token
+        //NOTE: THIS IS NOT A ROUTE FUNCTION
         try {
             if (!$user = JWTAuth::parseToken()->authenticate()) {
                 return NULL;
@@ -28,31 +34,22 @@ class AuthenticatedController extends Controller
 
     //Route Functions  
     public function getAuthenticatedUser() {
+        //PRE: JWTAuth token
+        //POST: returns the user object for the JWTAuth token
+        //NOTE: THIS IS A ROUTE FUNCTION
         try {
-
             if (! $user = JWTAuth::parseToken()->authenticate()) {
                 return response()->json(['user_not_found'], 404);
             }
-
         } catch (Tymon\JWTAuth\Exceptions\TokenExpiredException $e) {
-
             return response()->json(['token_expired'], $e->getStatusCode());
-
         } catch (Tymon\JWTAuth\Exceptions\TokenInvalidException $e) {
-
             return response()->json(['token_invalid'], $e->getStatusCode());
-
         } catch (Tymon\JWTAuth\Exceptions\JWTException $e) {
-
             return response()->json(['token_absent'], $e->getStatusCode());
-
         }
 
         // the token is valid and we have found the user via the sub claim
         return response()->json(compact('user'));
-    }
-
-    public function employees(){
-
     }
 }
